<resources>
    <string name="app_name">速寶</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_text">首頁</string>
    <string name="rebate_text">優惠信息</string>
    <string name="shopping_car_text">購物車</string>
    <string name="user_text">我的</string>
    <string name="main_kdgz_text">快遞跟蹤</string>
    <string name="main_cz_text">支付寶和微信充值</string>
    <string name="phone_shopping_text">手機購物更方便</string>
    <string name="area_text">地區選擇</string>
    <string name="welcome_text">歡迎你</string>
    <string name="welcome_user_text">用戶?，歡迎您</string>
    <string name="login_text">登錄</string>
    <string name="register_text">註冊</string>
    <string name="new_register_text">新用戶註冊</string>
    <string name="compile_myself">編輯個人資料</string>
    <string name="remaining_money_text">賬戶餘額</string>
    <string name="user_comments_text">我的評論</string>
    <string name="user_collection_text">我的收藏</string>
    <string name="user_subao_text">我的速寶快遞</string>
    <string name="user_push_text">推送消息</string>
    <string name="user_help_text">幫助</string>
    <string name="user_feedback_text">問題反饋</string>
    <string name="user_about_us_text">關於我們</string>
    <string name="user_invite_friends_text">邀請好友使用速寶</string>
    <string name="logout_text">退出</string>
    <string name="box_map_text">箱體地址</string>
    <string name="input_password_again">請再次輸入密碼</string>
    <string name="input_new_password_again">請再次輸入新密碼</string>
    <string name="input_password">請輸入密碼</string>
    <string name="input_new_password">請輸新入密碼</string>
    <string name="input_tel">請輸入手機號碼</string>
    <string name="max_image">您最多只能選擇</string>
    <string name="tel_not_null">手機號碼不能為空</string>
    <string name="tel_not_error">手機號碼不正確</string>
    <string name="pass_not_null">密碼不能為空</string>
    <string name="verify_not_null">驗證碼不能為空</string>
    <string name="code_not_null">驗證碼不能為空</string>
    <string name="pass_length">密碼長度需6-20位</string>
    <string name="pass_not_equals">兩次輸入的密碼不一樣</string>
    <string name="phone_message">請確認您的手機號碼，我們將發送驗證碼短信到這個號碼</string>
    <string name="confirm">確定</string>
    <string name="query">查詢</string>
    <string name="cancel">取消</string>
    <string name="sms_message">短信驗證碼已發送，請填寫驗證碼</string>
    <string name="get_code_time">秒后可重新獲取</string>
    <string name="input_code">請輸入短信驗證碼</string>
    <string name="get_code">獲取驗證碼</string>
    <string name="get_code_message">90秒內如果沒有收到驗證碼，請重新獲取。</string>
    <string name="or">or</string>
    <string name="look_look">先看看</string>
    <string name="forget_password">忘記密碼</string>
    <string name="forget_password_nessage">忘記密碼?!</string>
    <string name="input_forget_tel">輸入註冊時使用的手機號碼</string>
    <string name="sacnning_text">掃描</string>
    <string name="detailed_text">詳情</string>
    <string name="sdy_detailed_text">箱體詳細</string>
    <string name="sdy_content_text">快件詳情</string>
    <string name="box_express_text">此箱內的待取快件</string>
    <string name="box_in_express_text">箱體快件</string>
    <string name="open_box_text">開箱取件</string>
    <string name="open_box_find_box_text">箱體查件取件</string>
    <string name="box_find_box_text">此箱體內待取快件</string>
    <string name="open_text">付費開箱</string>
    <string name="need_money_text">需繳費</string>
    <string name="pay_way_text">請選擇付費方式</string>
    <string name="query_express_text">快递單號查詢</string>
    <string name="express_code_text">快遞單號</string>
    <string name="express_company_text">快递公司</string>
    <string name="input_express_code_text">请输入快递单号</string>
    <string name="choose_express_code_text">请选择快递公司</string>
    <string name="input_express_company_text">请输入快递公司</string>
    <string name="not_received_text">待取件(?)</string>
    <string name="received_text">已取件(?)</string>
    <string name="head_text">頭像</string>
    <string name="user_name_text">暱稱</string>
    <string name="user_tel_text">手機</string>
    <string name="input_user_name">點擊輸入暱稱</string>
    <string name="input_user_tel">點擊輸入手機</string>
    <string name="contact_text">聯繫方式</string>
    <string name="contact_tel_mail">請輸入手機/郵箱</string>
    <string name="item_list_text">商品列表</string>
    <string name="item_content_text">商品詳細</string>
    <string name="save_text">保存</string>
    <string name="delete_text">刪除</string>
    <string name="comment_text">评论</string>
    <string name="editor_text">編輯</string>
    <string name="send_text">评论</string>
    <string name="settlement_sum_text">去結賬(?)</string>
    <string name="all_clock_text">全選</string>
    <string name="all_sum_text">總計：</string>
    <string name="comments_sum_text">0人評論</string>


</resources>
