<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_usetPic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user_pic" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/user_usetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/whitle"
            android:textSize="@dimen/text_size_17" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:id="@+id/user_loginBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/user_loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_box_btn"
                    android:gravity="center"
                    android:text="@string/login_text"
                    android:textColor="@color/whitle"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/user_registerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_box_btn"
                    android:gravity="center"
                    android:text="@string/register_text"
                    android:textColor="@color/whitle"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_compileBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_box_btn"
                android:gravity="center"
                android:text="@string/compile_myself"
                android:textColor="@color/whitle"
                android:textSize="@dimen/text_size_17" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>