<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <include layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/sms_smsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/sms_message"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <RelativeLayout
            android:id="@+id/sms_phoneBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_smsTitle"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/orange_box_white_background_btn"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/sms_telIcon"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/tel_num_icon" />

            <TextView
                android:id="@+id/sms_telInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/sms_telIcon"
                android:background="@drawable/input_stype_lucency"
                android:textSize="@dimen/text_size_17" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sms_codeBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_phoneBox"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/orange_box_white_background_btn"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/sms_codeInputIcon"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/code_icon" />

            <EditText
                android:id="@+id/sms_codeInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/sms_codeInputIcon"
                android:background="@drawable/input_stype_lucency"
                android:hint="@string/input_code"
                android:textSize="@dimen/text_size_17" />
        </RelativeLayout>

        <TextView
            android:id="@+id/sms_confirmBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_codeBox"
            android:layout_margin="20dp"
            android:background="@drawable/orange_box_yellow_background_btn"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/whitle"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/sms_getCodeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/get_code_message"
            android:textColor="@color/text_gray_01"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/sms_getCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/sms_getCodeMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/orange_box_btn"
            android:text="@string/get_code_time"
            android:textColor="@color/text_orange"
            android:textSize="@dimen/text_size_15" />

        <ProgressBar
            android:id="@+id/sms_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>