<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginDialog_loginLayout"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="為了保障包裹信息的安全"
        android:textColor="@color/text_orange"
        android:textSize="@dimen/text_size_17" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="需登錄後使用"
        android:textColor="@color/text_orange"
        android:textSize="@dimen/text_size_17" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/orange_box_white_background_btn"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/tel_num_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="(853)"
            android:textColor="@color/text_orange"
            android:textSize="@dimen/text_size_17" />

        <EditText
            android:id="@+id/login_telInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_stype_lucency"
            android:cursorVisible="true"
            android:hint="@string/input_tel"
            android:textColorHint="@color/text_gray_02"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_17" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/orange_box_white_background_btn"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/password_icon" />

        <EditText
            android:id="@+id/login_passwordInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_stype_lucency"
            android:hint="@string/input_password"
            android:textColorHint="@color/text_gray_02"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_17" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_forgetPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:text="@string/forget_password_nessage"
            android:textColor="@color/text_orange"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/login_loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_forgetPassword"
            android:layout_centerInParent="true"
            android:background="@drawable/orange_box_orange_background_btn"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/whitle"
            android:textSize="@dimen/text_size_17" />
    </RelativeLayout>

</LinearLayout>